--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             text-align: center;
         }
     </style>
-    <title>Form(fa18-bcs-082)</title>
+    <title>Form</title>
 
   </head>
   <body>
